add d3 inside js code

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
     <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta charset=utf-8>
-	<title>NSSC Major Mover (1st Declared Majr)</title>
+	<title>UNFRST Mjr Move</title>
 	<meta name=description content="Undergraduate Major Movers: NSSC first declared major to degree major">
 	<meta name=viewport content="width=device-width, initial-scale=1.0">
 	<!--[if lt IE 9]><script src=/dashboards/majors/html5shiv-printshiv.js></script><![endif]-->
-    <script src="http://d3js.org/d3.v3.min.js"></script>
+
     <script src="./javascript.js"></script>
     <link rel="stylesheet" href="styles.css"/>
    
