change dropdown text

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <option value="data4" >Arts and Letters</option>
     <option value="data6" >Resdntl Arts and Humanities</option> 
     <option value="data8" >Business</option> 
-    <option value="data10" >COMM ARTS</option>
-    <option value="data14" >EDUCATION</option>
+    <option value="data10" >Communication Arts and Science</option>
+    <option value="data14" >Education</option>
     <option value="data16" >Engineering</option>
     <option value="data20" >Human Ecology</option>
     <option value="data24" >James Madison</option>
